--- a/gnc.css
+++ b/gnc.css
@@ -132,7 +132,7 @@ font-family: oswald;
   height: 40px;
   border-top: solid 1px white;
   padding: 5px 20px;
-  color: #165C82;
+  color: #F28D3A;
 }
 
 #bottomBar div{
