--- a/gnc.css
+++ b/gnc.css
@@ -25,7 +25,7 @@ body {
 }
 
 #home
- background-color: white;
+  background-image: url("photos/background.jpg") no-repeat fixed center center;
 
 .textContainer {
   border: solid 2px black;
