--- a/gnc.css
+++ b/gnc.css
@@ -49,6 +49,8 @@ body {
   min-width: 240px;
   color: black;
   background-color: white;
+  filter: alpha(opacity=0);
+  opacity: 0;
   padding: 0px 15px;
   text-align: center;
 }
