--- a/gnc.css
+++ b/gnc.css
@@ -14,7 +14,7 @@ img{
 }
 
 body {
-        background-image: url("photos/background.jpg") no-repeat fixed center center
+        background-image: url("photos/background.jpg") no-repeat center center
 }
 
 #logo{
