--- a/gnc.css
+++ b/gnc.css
@@ -14,7 +14,8 @@ img{
 }
 
 body {
-        background-image: url("photos/background.jpg") no-repeat center center
+        background-image: url("photos/background.jpg") no-repeat center center;
+        background-size: cover;
 }
 
 #logo{
