--- a/gnc.css
+++ b/gnc.css
@@ -16,7 +16,7 @@ img{
 body {
         background-image: url("photos/background.jpg");
         background-repeat: no-repeat;
-        background-position: center;
+        background-position: top left;
 }
 
 #logo{
