--- a/gnc.css
+++ b/gnc.css
@@ -14,9 +14,8 @@ img{
 }
 
 body {
-        background-image: url("photos/background.jpg");
-        background-repeat: no-repeat;
-        background-position: left top;
+        background-image: url("photos/background.jpg") no-repeat center center;
+        
 }
 
 #logo{
