--- a/gnc.css
+++ b/gnc.css
@@ -28,7 +28,9 @@ body{
 }
 
 #home
-   background-color: transparent;
+    background-image: url("photos/background.jpg"); 
+        background-repeat: no-repeat;
+        background-position: center center;
 
 .textContainer {
   border: solid 2px black;
