--- a/gnc.css
+++ b/gnc.css
@@ -15,7 +15,7 @@ img{
 }
 
 body{
-        background-image: url("photos/background.jpg"); 
+        background-image: url("photos/Logo.gif"); 
         background-repeat: no-repeat;
         background-position: center center;
         
