--- a/gnc.css
+++ b/gnc.css
@@ -19,6 +19,8 @@ body{
         background-repeat: no-repeat;
         background-position: center center;
         background-size: 60%;
+    opacity: 0.5;
+    filter: alpha(opacity=50);
         
 }
 
