--- a/gnc.css
+++ b/gnc.css
@@ -17,7 +17,7 @@ img{
 body{
         background-image: url("photos/background.jpg"); 
         background-repeat: no-repeat;
-        background-position: center center;
+        background-position: right center;
         background-size: 120%;
         
 }
