--- a/gnc.css
+++ b/gnc.css
@@ -32,6 +32,10 @@ body{
 #home
       
 .textContainer {
+     margin: 10px auto;
+   width: 70vw;
+   height: 50vh;
+   background: url("photos/gnclogo2.png") no-repeat center center
   margin: 100px auto;
   width: 70vw;
   height: 50vh;
