--- a/gnc.css
+++ b/gnc.css
@@ -14,7 +14,7 @@ img{
   width: 100%;
 }
 
-html{
+body{
         background-image: url("photos/background.jpg") no-repeat center fixed;
         background-size: cover; 
       
