--- a/gnc.css
+++ b/gnc.css
@@ -15,10 +15,10 @@ img{
 }
 
 body{
-        background-image: url("photos/background.jpg") no-repeat center fixed;
-        background-size: cover; 
-      
-       
+        background-image: url("photos/background.jpg");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: center; 
 }
 
 #logo{
