--- a/gnc.css
+++ b/gnc.css
@@ -15,11 +15,13 @@ img{
 }
 
 body{
+        width: 100%;
+        height: auto;
         background-image: url("photos/background.jpg");
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-position: center; 
-        background-size: cover;
+      
 }
 
 #logo{
