--- a/gnc.css
+++ b/gnc.css
@@ -19,8 +19,8 @@ body{
         height: auto;
         background-image: url("photos/background.jpg");
         background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-position: center; 
+        background-size: contain;
+      
       
 }
 
