--- a/gnc.css
+++ b/gnc.css
@@ -19,6 +19,7 @@ body{
         height: auto;
         background-image: url("photos/background.jpg");
         background-repeat: no-repeat;
+        background-position: center;
         background-size: contain;
       
       
