--- a/gnc.css
+++ b/gnc.css
@@ -15,11 +15,13 @@ img{
 }
 
 body{
+        background-color: black;
         width: 100%;
         height: auto;
         background-image: url("photos/background.jpg");
         background-repeat: no-repeat;
-        background-position: center;
+        background-attachment: fixed;
+        background-position: center center;
         background-size: contain;
       
       
