--- a/gnc.css
+++ b/gnc.css
@@ -55,7 +55,7 @@ body{
   font-size: 15px;
   width: 50vw;
   min-width: 240px;
-  color: black;
+  color: white;
   background-color: transparent;
   padding: 0px 15px;
   text-align: center;
