--- a/gnc.css
+++ b/gnc.css
@@ -19,7 +19,7 @@ body{
         background-color: black;
         width: 100%;
         height: auto;
-        background-image: url("photos/background.jpg");
+        background-image: url("photos/GNC8.jpg");
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-position: center center;
