--- a/gnc.css
+++ b/gnc.css
@@ -19,6 +19,8 @@ body{
         background-color: black;
         width: 100%;
         height: auto;
+        margin-top: 100px;
+        margin-bottom: 100px;
         background-image: url("photos/GNC8.jpg");
         background-repeat: no-repeat;
         background-attachment: fixed;
