--- a/gnc.css
+++ b/gnc.css
@@ -21,7 +21,7 @@ body{
         height: auto;
         margin-top: 100px;
         margin-bottom: 100px;
-        background-image: url("photos/GNC8.jpg");
+        background-image: url("photos/background.jpg");
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-position: center center;
