--- a/gnc.css
+++ b/gnc.css
@@ -26,7 +26,7 @@ body{
         background-attachment: fixed;
         background-position: center center;
         background-size: contain;
-      
+}
       
 
 
