--- a/gnc.css
+++ b/gnc.css
@@ -14,6 +14,11 @@ img{
   width: 100%;
 }
 
+video {
+    width: 100%;
+    height: auto;
+}
+
 body{
         font-size: 100%;
         background-color: black;
