--- a/gnc.css
+++ b/gnc.css
@@ -48,7 +48,7 @@ body{
 .textContainer {
     display: inline-block;
    margin: 100px auto;
-   width: 100%;
+   width: cover;
    height: auto;
  
 -webkit-background-size: cover;
@@ -63,7 +63,7 @@ body{
   margin: 5px auto;
   margin-bottom: 25px;
   font-size: 1.2em;
-  width: 50vw;
+  width: cover;
   min-width: 240px;
   color: white;
   background-color: transparent;
