--- a/gnc.css
+++ b/gnc.css
@@ -59,6 +59,7 @@ body{
   margin-bottom: 25px;
   font-size: 1.2em;
   width: cover;
+  height: auto;
   color: white;
   background-color: transparent;
   padding: 0px 15px;
