--- a/gnc.css
+++ b/gnc.css
@@ -32,9 +32,9 @@ body{
 
 
 #logo{
-  border: none;
-  width: 100%;
-  height: cover;
+  border: 30px;
+  width: 80%;
+  height: 80%;
   margin-bottom: 20px;
 }
 
