--- a/gnc.css
+++ b/gnc.css
@@ -59,6 +59,7 @@ body{
   margin: 5px auto;
   margin-bottom: 25px;
   font-size: 1.2em;
+  min-width: 500;
   width: cover;
   height: auto;
   color: white;
