--- a/gnc.css
+++ b/gnc.css
@@ -69,11 +69,12 @@ body{
 }
 
 .videoBox{
-    position: relative;
-    margin: 5px auto;
-    min-width: 100px;
-    width: 100%;
-    height: auto;
+     position: relative;
+    padding-top: 25px;
+    padding-bottom: 67.5%;
+    height: 0;
+    margin-bottom: 0;
+    overflow: hidden;
 }
 
 #home span{
