--- a/gnc.css
+++ b/gnc.css
@@ -75,7 +75,7 @@ body{
     padding-bottom: 67.5%;
     height: 100%;
     width: 100%;
-    margin-bottom: 0;
+    margin: 5px;
     overflow: hidden;
 }
 
