--- a/gnc.css
+++ b/gnc.css
@@ -70,10 +70,10 @@ body{
 
 #videoBox{
     background: cover;
-     position: absolute;
+     position: relative;
     padding-top: 25px;
     padding-bottom: 67.5%;
-    height: 100%;
+    height: auto;
     width: 100%;
     margin: 5px;
     overflow: hidden;
