--- a/gnc.css
+++ b/gnc.css
@@ -75,6 +75,7 @@ body{
     padding-bottom: 67.5%;
     height: 100%;
     width: 100%;
+    left: -62%;
     transform: translate3d(0px, 0px, 0px)
     margin: 5px;
     overflow: hidden;
