--- a/gnc.css
+++ b/gnc.css
@@ -71,7 +71,7 @@ body{
 #videoBox{
     background: cover;
     border: 0px;
-     position: absolute;
+     position: relative;
     padding-top: 25px;
     padding-bottom: 67.5%;
     height: 100%;
