--- a/gnc.css
+++ b/gnc.css
@@ -76,9 +76,8 @@ body{
     padding-bottom: 67.5%;
     height: 100%;
     width: 100%;
-    left: -62%;
-    transform: translate3d(0px, 0px, 0px)
-    margin: 5px;
+    top: 0;
+    left: 0;
     overflow: hidden;
 }
 
