--- a/gnc.css
+++ b/gnc.css
@@ -71,9 +71,10 @@ body{
 #videoHome{
     background: cover;
     border: 0px;
-     position: relative;
+     position: absolute;
     padding-top: 25px;
     padding-bottom: 67.5%;
+    min-width: 300;
     height: 100%;
     width: 100%;
     top: 0;
